# opticsMatrix

./: CMakeLists.txt  README.md  opticsMatrix.cc
include/: DataManager.hh  FitData.hh  InputDataManager.hh  MatrixFitter.hh  SieveMap.hh
src/: DataManager.cc  FitData.cc  InputDataManager.cc  MatrixFitter.cc  SieveMap.cc
